# EpSiLoNPoInT-

./: Dockerfile  EpSiLoNPoInTFuCK.py  README.md  TargetsDocker  bypass_payloads.txt  client.py  config.json  docker-compose.yml  dockerfile  exploitmass.py  launcher_test.py  launcher_ultimate.py  pipeline.py  pyproject.toml  recon.py  test_nethunter.py  worm.php
chain/docked/: docked_targets.json
chain/input/: proxies.txt  targets.txt
src/tsar/: settings.py
src/tsar/core/: logging.py  models.py
src/tsar/payloads/: mutator.py
src/tsar/utils/: proxy_rotator.py
tests/: conftest.py
